tabulation latex template - body fixed

--- a/reports/tabulation.tex
+++ b/reports/tabulation.tex
@@ -85,11 +85,11 @@
 	\bf  \bf ID No. & \bf Student Name &\multicolumn{4}{c|}{\textbf{CSE 111}}  & \multicolumn{4}{c|}{\textbf{CSE 113}} & \multicolumn{2}{c|}{\textbf{CSE 114}} & \multicolumn{4}{c|}{\textbf{EEE 121}} & \multicolumn{2}{c|}{\textbf{EEE 122}} &  \multicolumn{4}{c|}{\textbf{MAT 131}} & \multicolumn{4}{c|}{\textbf{STA 151}} & TCE & TPS & Result & Remarks \\ \hline
 	 
     &   & CATM & FEM & MO & LG     & CATM & FEM & MO &  LG   & MO & LG   & CATM & FEM & MO & LG   & MO & LG   & CATM & FEM & MO & LG   & CATM & FEM & MO & LG   &  &   &   &  \\ \hline
-18701006&Md. Habibul Bashar Faruq&\\
-\hline18701007&Md. Abu Saiem Aziz Chowdhury&\\
-\hline18701009&Yubayed Islam&\\
-\hline18701010&Arup Dutta Bappy&\\
-\hline18701012&Shariar Hasan&\\
+18701006&Md. Habibul Bashar Faruq&18.25&38.25&57.0&3.75&11.2516.5&41.25&58.0&3.75&11.2539.0&3.75&7.516.5&27.0&44.0&2.75&8.2519.0&3.75&3.7516.5&27.0&44.0&2.75&8.2519.0&38.0&57.0&3.75&11.25\\
+\hline18701007&Md. Abu Saiem Aziz Chowdhury&13.5&27.75&42.0&2.75&8.2520.0&36.5&57.0&3.75&11.2532.0&3.0&6.017.0&16.0&33.0&2.0&6.019.0&3.75&3.7510.125&17.0&28.0&0.0&0.018.5&27.0&46.0&3.0&9.0\\
+\hline18701009&Yubayed Islam&11.5&14.25&26.0&0.0&0.02.0&8.5&11.0&0.0&0.010.0&0.0&10.0&0.0&0.00.0&0.0&0.01.875&0.0&2.0&0.0&0.09.0&0.0&9.0&0.0&0.0\\
+\hline18701010&Arup Dutta Bappy&16.75&35.25&52.0&3.25&9.7517.75&35.5&54.0&3.5&10.538.0&3.75&7.510.0&26.0&36.0&2.25&6.7513.0&2.5&2.517.25&20.0&38.0&2.5&7.518.5&33.0&52.0&3.25&9.75\\
+\hline18701012&Shariar Hasan&11.5&34.75&47.0&3.0&9.012.75&38.75&52.0&3.25&9.7532.0&3.0&6.012.0&21.0&33.0&2.0&6.014.0&2.75&2.757.5&29.0&37.0&2.25&6.759.0&31.0&40.0&2.5&7.5\\
 \hline            \end{tabular}
             \end{small}
             \end{center}
