batch size - tabulations and summations page size

--- a/reports/tabulation.tex
+++ b/reports/tabulation.tex
@@ -80,6 +80,7 @@
 	\smallskip
 	
 	{\large {\sc Tabulation Sheet}}\\
+	{\large {\sc Hall: Shaheed Abdur Rab}}\\
 	
 	\smallskip
 	\textsc{$1^{st}$ Semester B.Sc. Engineering Examination 2018}\\
@@ -249,6 +250,7 @@
 	\smallskip
 	
 	{\large {\sc Tabulation Sheet}}\\
+	{\large {\sc Hall: Shaheed Abdur Rab}}\\
 	
 	\smallskip
 	\textsc{$1^{st}$ Semester B.Sc. Engineering Examination 2018}\\
@@ -418,6 +420,7 @@
 	\smallskip
 	
 	{\large {\sc Tabulation Sheet}}\\
+	{\large {\sc Hall: Shaheed Abdur Rab}}\\
 	
 	\smallskip
 	\textsc{$1^{st}$ Semester B.Sc. Engineering Examination 2018}\\
@@ -587,6 +590,7 @@
 	\smallskip
 	
 	{\large {\sc Tabulation Sheet}}\\
+	{\large {\sc Hall: Shaheed Abdur Rab}}\\
 	
 	\smallskip
 	\textsc{$1^{st}$ Semester B.Sc. Engineering Examination 2018}\\
@@ -756,6 +760,7 @@
 	\smallskip
 	
 	{\large {\sc Tabulation Sheet}}\\
+	{\large {\sc Hall: Shaheed Abdur Rab}}\\
 	
 	\smallskip
 	\textsc{$1^{st}$ Semester B.Sc. Engineering Examination 2018}\\
@@ -925,6 +930,7 @@
 	\smallskip
 	
 	{\large {\sc Tabulation Sheet}}\\
+	{\large {\sc Hall: Shaheed Abdur Rab}}\\
 	
 	\smallskip
 	\textsc{$1^{st}$ Semester B.Sc. Engineering Examination 2018}\\
@@ -1094,6 +1100,7 @@
 	\smallskip
 	
 	{\large {\sc Tabulation Sheet}}\\
+	{\large {\sc Hall: Shaheed Abdur Rab}}\\
 	
 	\smallskip
 	\textsc{$1^{st}$ Semester B.Sc. Engineering Examination 2018}\\
@@ -1251,6 +1258,7 @@
 	\smallskip
 	
 	{\large {\sc Tabulation Sheet}}\\
+	{\large {\sc Hall: Shaheed Abdur Rab}}\\
 	
 	\smallskip
 	\textsc{$1^{st}$ Semester B.Sc. Engineering Examination 2018}\\
@@ -1405,6 +1413,7 @@
 	\smallskip
 	
 	{\large {\sc Tabulation Sheet}}\\
+	{\large {\sc Hall: Shamsun Nahar}}\\
 	
 	\smallskip
 	\textsc{$1^{st}$ Semester B.Sc. Engineering Examination 2018}\\
@@ -1571,6 +1580,7 @@
 	\smallskip
 	
 	{\large {\sc Tabulation Sheet}}\\
+	{\large {\sc Hall: Pritilata}}\\
 	
 	\smallskip
 	\textsc{$1^{st}$ Semester B.Sc. Engineering Examination 2018}\\
@@ -1740,6 +1750,7 @@
 	\smallskip
 	
 	{\large {\sc Tabulation Sheet}}\\
+	{\large {\sc Hall: Pritilata}}\\
 	
 	\smallskip
 	\textsc{$1^{st}$ Semester B.Sc. Engineering Examination 2018}\\
@@ -1894,6 +1905,7 @@
 	\smallskip
 	
 	{\large {\sc Tabulation Sheet}}\\
+	{\large {\sc Hall: Deshnetri Begum Khaleda Zia}}\\
 	
 	\smallskip
 	\textsc{$1^{st}$ Semester B.Sc. Engineering Examination 2018}\\
@@ -2064,6 +2076,7 @@
 	\smallskip
 	
 	{\large {\sc Tabulation Sheet}}\\
+	{\large {\sc Hall: Jananatri Sheikh Hasina}}\\
 	
 	\smallskip
 	\textsc{$1^{st}$ Semester B.Sc. Engineering Examination 2018}\\
@@ -2233,6 +2246,7 @@
 	\smallskip
 	
 	{\large {\sc Tabulation Sheet}}\\
+	{\large {\sc Hall: Jananatri Sheikh Hasina}}\\
 	
 	\smallskip
 	\textsc{$1^{st}$ Semester B.Sc. Engineering Examination 2018}\\
