db changed - shcema bug fixed

--- a/reports/tabulation.tex
+++ b/reports/tabulation.tex
@@ -172,8 +172,8 @@
             {\centering Exam Committee}
             \begin{enumerate}
             \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ --  Chairman
-            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
-            \item Ms. Nasrin Akther  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
+            \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
+            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
             \end{enumerate} 
             \end{minipage}
             \hspace*{1.2cm}
@@ -342,8 +342,8 @@
             {\centering Exam Committee}
             \begin{enumerate}
             \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ --  Chairman
-            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
-            \item Ms. Nasrin Akther  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
+            \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
+            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
             \end{enumerate} 
             \end{minipage}
             \hspace*{1.2cm}
@@ -512,8 +512,8 @@
             {\centering Exam Committee}
             \begin{enumerate}
             \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ --  Chairman
-            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
-            \item Ms. Nasrin Akther  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
+            \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
+            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
             \end{enumerate} 
             \end{minipage}
             \hspace*{1.2cm}
@@ -682,8 +682,8 @@
             {\centering Exam Committee}
             \begin{enumerate}
             \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ --  Chairman
-            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
-            \item Ms. Nasrin Akther  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
+            \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
+            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
             \end{enumerate} 
             \end{minipage}
             \hspace*{1.2cm}
@@ -852,8 +852,8 @@
             {\centering Exam Committee}
             \begin{enumerate}
             \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ --  Chairman
-            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
-            \item Ms. Nasrin Akther  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
+            \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
+            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
             \end{enumerate} 
             \end{minipage}
             \hspace*{1.2cm}
@@ -1022,8 +1022,8 @@
             {\centering Exam Committee}
             \begin{enumerate}
             \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ --  Chairman
-            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
-            \item Ms. Nasrin Akther  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
+            \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
+            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
             \end{enumerate} 
             \end{minipage}
             \hspace*{1.2cm}
@@ -1180,8 +1180,8 @@
             {\centering Exam Committee}
             \begin{enumerate}
             \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ --  Chairman
-            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
-            \item Ms. Nasrin Akther  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
+            \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
+            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
             \end{enumerate} 
             \end{minipage}
             \hspace*{1.2cm}
@@ -1334,8 +1334,8 @@
             {\centering Exam Committee}
             \begin{enumerate}
             \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ --  Chairman
-            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
-            \item Ms. Nasrin Akther  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
+            \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
+            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
             \end{enumerate} 
             \end{minipage}
             \hspace*{1.2cm}
@@ -1501,8 +1501,8 @@
             {\centering Exam Committee}
             \begin{enumerate}
             \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ --  Chairman
-            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
-            \item Ms. Nasrin Akther  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
+            \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
+            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
             \end{enumerate} 
             \end{minipage}
             \hspace*{1.2cm}
@@ -1672,8 +1672,8 @@
             {\centering Exam Committee}
             \begin{enumerate}
             \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ --  Chairman
-            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
-            \item Ms. Nasrin Akther  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
+            \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
+            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
             \end{enumerate} 
             \end{minipage}
             \hspace*{1.2cm}
@@ -1826,8 +1826,8 @@
             {\centering Exam Committee}
             \begin{enumerate}
             \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ --  Chairman
-            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
-            \item Ms. Nasrin Akther  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
+            \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
+            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
             \end{enumerate} 
             \end{minipage}
             \hspace*{1.2cm}
@@ -1997,8 +1997,8 @@
             {\centering Exam Committee}
             \begin{enumerate}
             \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ --  Chairman
-            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
-            \item Ms. Nasrin Akther  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
+            \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
+            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
             \end{enumerate} 
             \end{minipage}
             \hspace*{1.2cm}
@@ -2168,8 +2168,8 @@
             {\centering Exam Committee}
             \begin{enumerate}
             \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ --  Chairman
-            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
-            \item Ms. Nasrin Akther  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
+            \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
+            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
             \end{enumerate} 
             \end{minipage}
             \hspace*{1.2cm}
@@ -2322,8 +2322,8 @@
             {\centering Exam Committee}
             \begin{enumerate}
             \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ --  Chairman
-            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
-            \item Ms. Nasrin Akther  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
+            \item Mr. Rokan Uddin Faruqui  \hspace*{1ex} $\ldots \ldots \ldots \ldots$ -- Member
+            \item Dr. Kazi Ashrafuzzaman  \hspace*{1ex} $\ldots \ldots \ldots \ldots$-- Member
             \end{enumerate} 
             \end{minipage}
             \hspace*{1.2cm}
