--- a/reports/gs.tex
+++ b/reports/gs.tex
@@ -80,7 +80,7 @@
                 \hline  \rule[-1ex]{0pt}{3.5ex} {\centering{\bf Course Code}} &  \multicolumn{1}{c|}{\textbf{Course Title}}  & {\bf Credits} & {\bf Letter Grade} & {\bf Grade Point} & {\bf Point Secured}  \\ 
                 \hline   1 &  Introduction to Computer Systems and Computing Agents		 & 3 & X & 0.0 & 0.0 \\ %\numtwo{summation.gp} %\\ 
                 \hline   2 &  Structured Programming Language		 & 3 & D & 2.0 & 6.0 \\ %\numtwo{summation.gp} %\\ 
-                \hline   3 &  Structured Programming Language Lab		 & 2 & X & 0.0 & 0.0 \\ %\numtwo{summation.gp} %\\ 
+                \hline   3 &  Structured Programming Language Lab		 & 2 & B- & 2.75 & 5.5 \\ %\numtwo{summation.gp} %\\ 
                 \hline   4 &  Electrical Engineering		 & 3 & F & 0.0 & 0.0 \\ %\numtwo{summation.gp} %\\ 
                 \hline   5 &  Electrical Engineering Lab		 & 1 & B & 3.0 & 3.0 \\ %\numtwo{summation.gp} %\\ 
                 \hline   6 &  Matrices, Vector Analysis and Geometry		 & 3 & F & 0.0 & 0.0 \\ %\numtwo{summation.gp} %\\ 
@@ -93,7 +93,7 @@
 
                 \begin{center}
                 \begin{tabular}{p{1.5in} >{\raggedright}p{1.6in} p{0.1in} >{\raggedright}p{2.8in} >{\raggedleft}p{1.0in}}
-                Credits Offered: $18$ &  Credits Earned: $7.0$ & &  Grade Point Average (GPA): \fbox{\bf~0.84} & Result: \fbox{\bf~{F}~} \\
+                Credits Offered: $18$ &  Credits Earned: $9.0$ & &  Grade Point Average (GPA): \fbox{\bf~1.14} & Result: \fbox{\bf~{F}~} \\
                 \end{tabular}
                 \end{center}
             \vspace{1cm}
@@ -2113,7 +2113,7 @@
                 \hline  \rule[-1ex]{0pt}{3.5ex} {\centering{\bf Course Code}} &  \multicolumn{1}{c|}{\textbf{Course Title}}  & {\bf Credits} & {\bf Letter Grade} & {\bf Grade Point} & {\bf Point Secured}  \\ 
                 \hline   1 &  Introduction to Computer Systems and Computing Agents		 & 3 & B+ & 3.25 & 9.75 \\ %\numtwo{summation.gp} %\\ 
                 \hline   2 &  Structured Programming Language		 & 3 & B & 3.0 & 9.0 \\ %\numtwo{summation.gp} %\\ 
-                \hline   3 &  Structured Programming Language Lab		 & 2 & X & 0.0 & 0.0 \\ %\numtwo{summation.gp} %\\ 
+                \hline   3 &  Structured Programming Language Lab		 & 2 & B & 3.0 & 6.0 \\ %\numtwo{summation.gp} %\\ 
                 \hline   4 &  Electrical Engineering		 & 3 & F & 0.0 & 0.0 \\ %\numtwo{summation.gp} %\\ 
                 \hline   5 &  Electrical Engineering Lab		 & 1 & B & 3.0 & 3.0 \\ %\numtwo{summation.gp} %\\ 
                 \hline   6 &  Matrices, Vector Analysis and Geometry		 & 3 & F & 0.0 & 0.0 \\ %\numtwo{summation.gp} %\\ 
@@ -2126,7 +2126,7 @@
 
                 \begin{center}
                 \begin{tabular}{p{1.5in} >{\raggedright}p{1.6in} p{0.1in} >{\raggedright}p{2.8in} >{\raggedleft}p{1.0in}}
-                Credits Offered: $18$ &  Credits Earned: $10.0$ & &  Grade Point Average (GPA): \fbox{\bf~1.67} & Result: \fbox{\bf~{F}~} \\
+                Credits Offered: $18$ &  Credits Earned: $12.0$ & &  Grade Point Average (GPA): \fbox{\bf~2.0} & Result: \fbox{\bf~{F}~} \\
                 \end{tabular}
                 \end{center}
             \vspace{1cm}
@@ -2220,7 +2220,7 @@
                 \hline  \rule[-1ex]{0pt}{3.5ex} {\centering{\bf Course Code}} &  \multicolumn{1}{c|}{\textbf{Course Title}}  & {\bf Credits} & {\bf Letter Grade} & {\bf Grade Point} & {\bf Point Secured}  \\ 
                 \hline   1 &  Introduction to Computer Systems and Computing Agents		 & 3 & B- & 2.75 & 8.25 \\ %\numtwo{summation.gp} %\\ 
                 \hline   2 &  Structured Programming Language		 & 3 & B+ & 3.25 & 9.75 \\ %\numtwo{summation.gp} %\\ 
-                \hline   3 &  Structured Programming Language Lab		 & 2 & X & 0.0 & 0.0 \\ %\numtwo{summation.gp} %\\ 
+                \hline   3 &  Structured Programming Language Lab		 & 2 & A- & 3.5 & 7.0 \\ %\numtwo{summation.gp} %\\ 
                 \hline   4 &  Electrical Engineering		 & 3 & C & 2.25 & 6.75 \\ %\numtwo{summation.gp} %\\ 
                 \hline   5 &  Electrical Engineering Lab		 & 1 & B- & 2.75 & 2.75 \\ %\numtwo{summation.gp} %\\ 
                 \hline   6 &  Matrices, Vector Analysis and Geometry		 & 3 & C+ & 2.5 & 7.5 \\ %\numtwo{summation.gp} %\\ 
@@ -2233,7 +2233,7 @@
 
                 \begin{center}
                 \begin{tabular}{p{1.5in} >{\raggedright}p{1.6in} p{0.1in} >{\raggedright}p{2.8in} >{\raggedleft}p{1.0in}}
-                Credits Offered: $18$ &  Credits Earned: $16.0$ & &  Grade Point Average (GPA): \fbox{\bf~2.45} & Result: \fbox{\bf~{P}~} \\
+                Credits Offered: $18$ &  Credits Earned: $18.0$ & &  Grade Point Average (GPA): \fbox{\bf~2.84} & Result: \fbox{\bf~{P}~} \\
                 \end{tabular}
                 \end{center}
             \vspace{1cm}
@@ -2327,7 +2327,7 @@
                 \hline  \rule[-1ex]{0pt}{3.5ex} {\centering{\bf Course Code}} &  \multicolumn{1}{c|}{\textbf{Course Title}}  & {\bf Credits} & {\bf Letter Grade} & {\bf Grade Point} & {\bf Point Secured}  \\ 
                 \hline   1 &  Introduction to Computer Systems and Computing Agents		 & 3 & A & 3.75 & 11.25 \\ %\numtwo{summation.gp} %\\ 
                 \hline   2 &  Structured Programming Language		 & 3 & A+ & 4.0 & 12.0 \\ %\numtwo{summation.gp} %\\ 
-                \hline   3 &  Structured Programming Language Lab		 & 2 & X & 0.0 & 0.0 \\ %\numtwo{summation.gp} %\\ 
+                \hline   3 &  Structured Programming Language Lab		 & 2 & A+ & 4.0 & 8.0 \\ %\numtwo{summation.gp} %\\ 
                 \hline   4 &  Electrical Engineering		 & 3 & C & 2.25 & 6.75 \\ %\numtwo{summation.gp} %\\ 
                 \hline   5 &  Electrical Engineering Lab		 & 1 & A+ & 4.0 & 4.0 \\ %\numtwo{summation.gp} %\\ 
                 \hline   6 &  Matrices, Vector Analysis and Geometry		 & 3 & C & 2.25 & 6.75 \\ %\numtwo{summation.gp} %\\ 
@@ -2340,7 +2340,7 @@
 
                 \begin{center}
                 \begin{tabular}{p{1.5in} >{\raggedright}p{1.6in} p{0.1in} >{\raggedright}p{2.8in} >{\raggedleft}p{1.0in}}
-                Credits Offered: $18$ &  Credits Earned: $16.0$ & &  Grade Point Average (GPA): \fbox{\bf~2.77} & Result: \fbox{\bf~{P}~} \\
+                Credits Offered: $18$ &  Credits Earned: $18.0$ & &  Grade Point Average (GPA): \fbox{\bf~3.22} & Result: \fbox{\bf~{P}~} \\
                 \end{tabular}
                 \end{center}
             \vspace{1cm}
