--- a/gs.tex
+++ b/gs.tex
@@ -55,7 +55,7 @@
             \hspace{0.2cm}
             \begin{minipage}[m]{0.3\linewidth} \flushright
             \vspace*{-1.5in}  
-            {\flushright \bf	Serial No:\sl \\}
+            {\flushright \bf	Serial No~:~\sl \\}
             \vspace{4mm}
             \begin{small}
             \renewcommand{\arraystretch}{1.01}
